Fix dropdown issue